<resources>
    <string name="app_name">MeetIt</string>
    <string name="janedoe">Jane Doe</string>
    <string name="country">Eindhoven, NL</string>
    <string name="placeofstudy">Place of study</string>
    <string name="field">Field</string>
    <string name="levelofstudy">Level of study</string>
    <string name="meetingwith">Meeting with:</string>
    <string name="meetinglocation">Subject of the meeting:</string>
    <string name="title_activity_select_user">SelectUser</string>

</resources>
