<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#393D3F"
    tools:context=".UserProfile">

    <ImageView
        android:id="@+id/colorbackground"
        android:layout_width="341dp"
        android:layout_height="458dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_colorbackground" />

    <ImageView
        android:id="@+id/whitebackground"
        android:layout_width="376dp"
        android:layout_height="507dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/profile_whitebackground"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/profilephoto"
        android:layout_width="204dp"
        android:layout_height="206dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:elevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/name"
        android:layout_width="109dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="8dp"
        android:elevation="15dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/janedoe"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/colorbackground" />

    <TextView
        android:id="@+id/country"
        android:layout_width="94dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:elevation="15dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/country"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilephoto" />

    <TextView
        android:id="@+id/placeofstudy"
        android:layout_width="77dp"
        android:layout_height="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:elevation="15dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/placeofstudy"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="10sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country" />

    <TextView
        android:id="@+id/field"
        android:layout_width="77dp"
        android:layout_height="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:elevation="15dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/field"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="10sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeofstudybox" />

    <TextView
        android:id="@+id/levelofstudy"
        android:layout_width="77dp"
        android:layout_height="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:elevation="15dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/levelofstudy"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="10sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldbox" />

    <EditText
        android:id="@+id/placeofstudybox"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:elevation="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/browser_actions_text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/colorbackground"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="@+id/whitebackground"
        app:layout_constraintTop_toBottomOf="@+id/country" />

    <EditText
        android:id="@+id/fieldbox"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:elevation="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/browser_actions_text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/colorbackground"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="@+id/whitebackground"
        app:layout_constraintTop_toBottomOf="@+id/placeofstudybox" />

    <EditText
        android:id="@+id/levelbox"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:elevation="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/browser_actions_text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/whitebackground"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="@+id/colorbackground"
        app:layout_constraintTop_toBottomOf="@+id/fieldbox" />

    <Button
        android:id="@+id/signout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="Sign out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorbackground" />


</android.support.constraint.ConstraintLayout>